# bergson-kronfluence-compare

./: .gitignore  compare_bergson_kronfluence.md  pyproject.toml  setup.sh
common/: bergson_hessian.py  kron_pipeline.py  kron_pipeline_simple.py  kron_task.py
ekfac_scores/: bergson_pipeline.py  compare.ipynb  kronfluence_scores.py  run_bergson.sh  run_both.sh  run_kronfluence.sh
hessian/: compare.ipynb  kronfluence_factors.py  run_bergson.sh  run_kronfluence.sh
hessian_simple/: compare.ipynb  kronfluence_factors.py  run_bergson.sh  run_kronfluence.sh
patches/: kronfluence.patch
raw_influence/: bergson_pipeline.py  compare.ipynb  kronfluence_scores.py  run_bergson.sh  run_kronfluence.sh
