[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bergson-kronfluence-compare"
description = "Comparison of bergson and kronfluence influence function implementations"
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
    "bergson",
    "kronfluence",
    "matplotlib",
    "numpy",
    "safetensors",
    "scipy",
    "torch",
]
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["common*"]

[tool.ruff]
lint.ignore = ["E741","F722"]
lint.select = ["E", "F", "I"]
line-length = 88
