[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bergson-kronfluence-compare"
description = "Comparison of bergson and kronfluence influence function implementations"
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
    # bergson installed from submodule via setup.sh
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    # kronfluence installed from patched submodule via setup.sh
    "matplotlib",
    "numpy",
    "safetensors",
    "scipy",
    "torch",
]
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["common*", "raw_influence*", "ekfac_scores*", "hessian*", "hessian_simple*"]

[tool.ruff]
lint.ignore = ["E741","F722"]
lint.select = ["E", "F", "I"]
line-length = 88
